--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="PT-Br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
-    <title>Bitcraft - Bicicletas Elétricas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <title>Bikcraft - Bicicletas Elétricas</title>
 </head>
 <body>
     <header class="header-bg">
@@ -21,9 +24,16 @@
             </nav>
         </div>
     </header>
-<h1>Bicicletas feitas sob medida.</h1>
-<h2>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</h2>
-
-<span>ESCOLHA A SUA</span>
+<main class="intro-bg">
+    <div class="intro">
+        <div class="intro=content">
+            <h1>Bicicletas feitas sob medida<span>.</span></h1>
+            <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        
+            <a href="##" class="botao">ESCOLHA A SUA</a>
+        </div>
+        <div><img src="img/fotos/introducao.jpg" alt="Bicicleta eletrica preta"></div>
+    </div>
+</main>
 </body>
 </html>
