--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="PT-Br">
 <head>
     <meta charset="UTF-8">
+    <title>GABI -BIKE </title>
     <link rel="stylesheet" href="css/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">icicletas Elétricas</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap">
 </head>
 <body>
     <header class="header-bg">
         <div class="header container">
-            <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft" ></a>
+            <a href="index.html"><img src="img/bikcraft.svg" alt="Bikcraft" ></a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m" >
-                    <li><a href="./bicicletas.html">Bicicletas</a></li>
+                    <li><a href="bicicletas.html">Bicicletas</a></li>
                     <li><a href="./seguros.html">Seguros</a></li>
                     <li><a href="./contato.html">Contato</a></li>
                 </ul>
@@ -92,5 +93,69 @@
 
     </section>
 
+    <article id="seguros-bg">
+        <div class=" seguros container">
+            <h2 class="font-1-xxl cor-0" >seguros <span class="cor-p1" >.</span></h2>
+            <div class="seguros-item prata">
+                <h3 class=" font-1-xl cor-6 ">PRATA</h3>
+                <span class="font-2-xl cor-0">R$ 199 <span class="font-1-s cor-3"> mensal </span></span>
+                <ul class="font-2-m cor-0">
+                    <li>Duas trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 08h às 18h</li>
+                    <li>Cobertura estadual</li>
+                </ul>
+                <a class="botao secundario" href="./orcamentos.html">INSCREVA-SE</a>
+            </div>
+            <div class="seguros-item ouro">
+                <h3 class="cor-p2 font-2-xl">OURO</h3>
+                <span class="font-1-xl cor-0">R$ 299 <span class="font-1-s cor-3" > mensal </span></span>                  
+                <ul class="font-2-m cor-0">
+                    <li>Cinco trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 24h</li>
+                    <li>Cobertura nacional</li>
+                    <li>Desconto em parceiros</li>
+                    <li>Acesso ao Clube Bikcraf</li>
+                </ul>
+                <a class="botao" href="./orcamentos.html">INSCREVA-SE</a>
+            </div>
+        </div>
+    </article>
+
 </body>
+<footer>
+    <div class="fTr container"> 
+        <div class="img-bk"><img src="img/bikcraft.svg" alt="Bikcraft"></div>
+        <div class="footer-redes">
+            <h4 class="cor-0 font-2-l-b" >CONTATO</h4>
+            <nav>
+                <ul class="cor-5 font-2-m">
+                    <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
+                    <li> <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                    <li class="address"> Rua Ali Perto, 42 - Botafogo <br>
+                        Rio de Janeiro - RJ</li>
+                </ul>
+            </nav>
+            <div>
+                <a href="##"><img src="img/redes/facebook.svg" alt="Facebook" ></a>
+                <a href="##"><img src="img/redes/instagram.svg" alt="Facebook"></a>
+                <a href="##"><img src="img/redes/youtube.svg" alt="Facebook"></a>
+             </div>
+        </div>
+      
+        <div class="footer-contato">
+            <h4  class="cor-0 font-2-l-b">INFORMAÇÕES</h4>
+            <nav>
+                <ul class="cor-5 font-2-s">
+                    <li> <a href="bicicletas.html">Bicicletas </a> </li>
+                    <li><a href="">Seguros</a></li>
+                    <li><a href="">Contato</a></li>
+                    <li><a href="termos.html">Termos e Condições</a></li>
+                </ul>
+            </nav>
+        </div>
+        <p class="footer-copy cor-6 font-2-m">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+</footer>
 </html>
