--- a/bicicletas.html
+++ b/bicicletas.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Bicicletas- Bikcraft</title>
@@ -46,7 +46,7 @@
                     <li><img src="./img/icones/local.svg">50 km/h</li>
                     <li><img src="./img/icones/rastreador.svg">Rastreador</li>
                 </ul>
-                <a class="botao"> Mais sobre <img src="img/icones/seta.svg" alt=""></a>
+                <a href="./bicicleta-html/nimbus.html"class="botao seta"> Mais sobre </a>
             </div>
             <div class="item container magic"> 
                 <div class="bici-img">
@@ -61,7 +61,7 @@
                     <li><img src="./img/icones/local.svg">45 km/h</li>
                     <li><img src="./img/icones/rastreador.svg">Rastreador</li>
                 </ul>
-                <a class="botao"> Mais sobre <img src="img/icones/seta.svg" alt=""></a>
+                <a class="botao seta"> Mais sobre</a>
             </div><div class="item container "> 
                 <div class="bici-img">
                     <img src="img/bicicletas/nebula.jpg" alt="Bicicleta nebula">
@@ -75,7 +75,7 @@
                     <li><img src="./img/icones/local.svg">50 km/h</li>
                     <li><img src="./img/icones/rastreador.svg">Rastreador</li>
                 </ul>
-                <a class="botao"> Mais sobre <img src="img/icones/seta.svg" alt=""></a>
+                <a class="botao seta"> Mais sobre</a>
             </div>
             
         </div> 
