--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="PT-Br">
 <head>
     <meta charset="UTF-8">
-    <title>GABI -BIKE </title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>GABI -BIKE</title>
+    <link rel="stylesheet" href="./css/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
@@ -149,8 +149,8 @@
             <nav>
                 <ul class="cor-5 font-2-s">
                     <li> <a href="bicicletas.html">Bicicletas </a> </li>
-                    <li><a href="">Seguros</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="seguros.html">Seguros</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                     <li><a href="termos.html">Termos e Condições</a></li>
                 </ul>
             </nav>
