--- a/termos.html
+++ b/termos.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Termos e Condições - Bikcraft</title>
@@ -73,10 +73,9 @@
                 <nav>
                     <ul class="cor-5 font-2-s">
                         <li> <a href="bicicletas.html">Bicicletas </a> </li>
-                        <li><a href="">Seguros</a></li>
-                        <li><a href="">Contato</a></li>
+                        <li><a href="seguros.html">Seguros</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                         <li><a href="termos.html">Termos e Condições</a></li>
-                    </ul>
                 </nav>
             </div>
             <p class="footer-copy cor-6 font-2-m">Bikcraft © Alguns direitos reservados.</p>
